changes in swagger methods
